[gd_scene load_steps=3 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://scripts/menu_scripts/main_menu.gd" id="1_0x0x0"]
[ext_resource type="Theme" uid="uid://bqxvhqxqxqxqx" path="res://assets/fantasy_pixelart_ui/theme.tres" id="2_0x0x0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")
theme = ExtResource("2_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fishing Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Adventure"

[node name="EventsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Events"

[node name="DebugButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Debug Scene"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
